--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -20,10 +20,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: iterative/setup-dvc@v1
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}            
+        python-version: ${{ matrix.python-version }}
+    - name: Get data
+      run: |
+        pip install -U dvc[gdrive] pydrive2 
+        dvc pull
+      env:
+        GDRIVE_CREDENTIALS_DATA : ${{ secrets.GDRIVE_CREDENTIALS_DATA }}              
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
