--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,9 +28,11 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        role-to-assume: arn:aws:iam::487118239906:user/mlops-nanodegree-msinha251
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
-      
+        role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+        role-session-name: test
     - name: setup dvc
       run: |
         dvc pull
